fix alignment artists

--- a/wp-content/themes/sight/custom.css
+++ b/wp-content/themes/sight/custom.css
@@ -142,7 +142,7 @@ div.product-detail  {
 
 /* to align with the menu and tab headers */
 div#product-format-tabs div.ui-tabs div.ui-tabs-panel div.wp-tab-content,
-div#artist-set-tabs .grid {
+div#artist-set-tabs div.ui-tabs div.ui-tabs-panel div.wp-tab-content{
 padding: 0 0 0 0px;
 }
 
